--- a/c-map.html
+++ b/c-map.html
@@ -96,48 +96,50 @@ TemplateMo 580 Woox Travel
   <div class="amazing-deals">
     <div class="container">
       <div class="row">
-
-
         <div class="col-lg-6 col-sm-6">
           <div class="item">
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-12">
                 <div class="image">
-                  <img src="assets/images/EuroVelo.jpg" alt="" width=300px height=500px>
+                  <img src="assets/images/EuroVelo.jpg" alt="">
                 </div>
               </div>
-              <div class="col-lg-6 align-self-center">
-                <div class="content">
-                  <h4>EUROVELO</h4>
-                  <p>
-                    EuroVelo is a network of long distance cycle routes connecting and uniting the whole European continent. EuroVelo consists of over 90,000 km of cycling routes, of which well over 45,000 km are using developed cycle paths and low-traffic roads. EuroVelo signings can be found all across Europe. The international status of the routes helps with garnering funds and political support for their continuing construction.
-                    </p>
-                  <div class="main-button">
-                    <a href="reservation.html">Make a Reservation</a>
+            </div>
+            <div class="row">
+                <div class="col-12 align-self-center">
+                  <div class="content">
+                    <h4>EUROVELO</h4>
+                    <p>
+                      EuroVelo is a network of long distance cycle routes connecting and uniting the whole European continent. EuroVelo consists of over 90,000 km of cycling routes, of which well over 45,000 km are using developed cycle paths and low-traffic roads. EuroVelo signings can be found all across Europe. The international status of the routes helps with garnering funds and political support for their continuing construction.
+                      </p>
+                    <div class="main-button">
+                      <a href="reservation.html">Make a Reservation</a>
+                    </div>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-6 col-sm-6">
           <div class="item">
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-12">
                 <div class="image">
-                  <img src="assets/images/PedalVelo.png" alt="" width=300px height=500px>
+                  <img src="assets/images/PedalVelo.png" alt="">
                 </div>
               </div>
-              <div class="col-lg-6 align-self-center">
-                <div class="content">
-                  <h4>PEDALPRO</h4>
-                  <p>PedalPro is a platform created by our company, specifically for our project on integrating Shkodra into the international Eurovelo network. This project aims to increase the use of bicycles as a sustainable form of transportation, to integrate Shkodra into the bicycle network. In this regard, the construction of a 6 km bicycle path connecting Shkodra to the Eurovelo network is planned to build as soon as possible. 
-                  </p>
-                  <div class="main-button">
-                    <a href="reservation.html">Make a Reservation</a>
+            </div>
+            <div class="row">
+                <div class="col-12 align-self-center">
+                  <div class="content">
+                    <h4>PEDALPRO</h4>
+                    <p>PedalPro is a platform created by our company, specifically for our project on integrating Shkodra into the international Eurovelo network. This project aims to increase the use of bicycles as a sustainable form of transportation, to integrate Shkodra into the bicycle network. In this regard, the construction of a 6 km bicycle path connecting Shkodra to the Eurovelo network is planned to build as soon as possible. 
+                    </p>
+                    <div class="main-button">
+                      <a href="reservation.html">Make a Reservation</a>
+                    </div>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
