--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@ TemplateMo 580 Woox Travel
                         <li><a href="about.html" class="active">About</a></li>
                         <li><a href="deals.html">Deals</a></li>
                         <li><a href="reservation.html">Reservation</a></li>
-                        <li><a href="c-map.html">C-Map</a></li>
+                        <li><a href="map.html">Map</a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
