--- a/reservation.html
+++ b/reservation.html
@@ -59,7 +59,7 @@ TemplateMo 580 Woox Travel
                         <li><a href="about.html">About</a></li>
                         <li><a href="deals.html">Deals</a></li>
                         <li><a href="reservation.html" class="active">Reservation</a></li>
-                        <li><a href="c-map.html">C-Map</a></li>
+                        <li><a href="map.html">Map</a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
